Removed Drivetrain Subsystem and added dead reckoning autonomous command

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,7 +4,8 @@
   "holonomicMode": true,
   "pathFolders": [
     "Left",
-    "Middle"
+    "Middle",
+    "New Folder"
   ],
   "autoFolders": [
     "Left"
@@ -34,6 +35,6 @@
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": [
-    "{\"name\":\"Rectangle\",\"type\":\"rounded_rect\",\"data\":{\"center\":{\"x\":0.5,\"y\":0.25},\"size\":{\"width\":0.014,\"length\":0.014},\"borderRadius\":0.05,\"strokeWidth\":0.02,\"filled\":false}}"
+    "{\"name\":\"Rectangle\",\"type\":\"rounded_rect\",\"data\":{\"center\":{\"x\":0.5,\"y\":0.0},\"size\":{\"width\":0.014,\"length\":0.014},\"borderRadius\":0.05,\"strokeWidth\":0.02,\"filled\":false}}"
   ]
 }
