--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -21,7 +21,7 @@
   "driveWheelRadius": 0.05,
   "driveGearing": 6.75,
   "maxDriveSpeed": 4.125,
-  "driveMotorType": "falcon500",
+  "driveMotorType": "krakenX60",
   "driveCurrentLimit": 60.0,
   "wheelCOF": 1.19,
   "flModuleX": 0.2921,
@@ -35,6 +35,6 @@
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": [
-    "{\"name\":\"Rectangle\",\"type\":\"rounded_rect\",\"data\":{\"center\":{\"x\":0.5,\"y\":0.0},\"size\":{\"width\":0.014,\"length\":0.014},\"borderRadius\":0.05,\"strokeWidth\":0.02,\"filled\":false}}"
+    "{\"name\":\"Line\",\"type\":\"line\",\"data\":{\"start\":{\"x\":0.419,\"y\":0.5},\"end\":{\"x\":0.419,\"y\":-0.5},\"strokeWidth\":0.02}}"
   ]
 }
